tests/compile_fail/bit/bad_bit_ceil_signed.cpp
#include "snap/bit/bit_ceil.hpp"

int main()
{
	int s  = 7;
	auto r = snap::bit_ceil(s);
	(void)r;
}
